--- a/react_study/public/index.html
+++ b/react_study/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React脚手架</title>
-    <link rel="stylesheet" href="./bootstrap.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.css" />
   </head>
   <body>
     <div id="root"></div>
